--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
+ body }
 body {
+
 	
 }
 
@@ -6,7 +8,9 @@ body {
 	width:100%;
 }
 
-.principal{
+
+
+.principal
 	background: #CCCCCC;
 	padding: 30px;
 }
