--- a/produtos.css
+++ b/produtos.css
@@ -24,4 +24,13 @@ nav a {
    font-weight: bold;
    font-size: 22px;
    text-decoration: none;
+ }
+
+ produtos {    
+  width: 940px;
+  margin:0auto ;
 }
+
+ produtos li {    
+  display: inline-block;
+ }
